@@ -252,21 +252,11 @@ argument_list|>
 argument_list|>
 name|columns
 decl_stmt|;
-specifier|private
-name|boolean
-name|havingExpressionIsActive
-init|=
-literal|false
-decl_stmt|;
 comment|// package private for tests
 name|boolean
 name|singleColumn
 init|=
 literal|true
-decl_stmt|;
-specifier|private
-name|Expression
-name|having
 decl_stmt|;
 name|boolean
 name|distinct
@@ -335,6 +325,14 @@ operator|=
 name|select
 operator|.
 name|where
+expr_stmt|;
+name|this
+operator|.
+name|having
+operator|=
+name|select
+operator|.
+name|having
 expr_stmt|;
 name|this
 operator|.
@@ -432,13 +430,6 @@ operator|.
 name|setColumns
 argument_list|(
 name|columns
-argument_list|)
-expr_stmt|;
-name|replacement
-operator|.
-name|setHavingQualifier
-argument_list|(
-name|having
 argument_list|)
 expr_stmt|;
 name|replacement
@@ -2163,57 +2154,6 @@ return|return
 name|this
 return|;
 block|}
-specifier|private
-name|void
-name|setActiveExpression
-parameter_list|(
-name|Expression
-name|exp
-parameter_list|)
-block|{
-if|if
-condition|(
-name|havingExpressionIsActive
-condition|)
-block|{
-name|having
-operator|=
-name|exp
-expr_stmt|;
-block|}
-else|else
-block|{
-name|where
-operator|=
-name|exp
-expr_stmt|;
-block|}
-name|replacementQuery
-operator|=
-literal|null
-expr_stmt|;
-block|}
-specifier|private
-name|Expression
-name|getActiveExpression
-parameter_list|()
-block|{
-if|if
-condition|(
-name|havingExpressionIsActive
-condition|)
-block|{
-return|return
-name|having
-return|;
-block|}
-else|else
-block|{
-return|return
-name|where
-return|;
-block|}
-block|}
 specifier|public
 name|Collection
 argument_list|<
@@ -2227,16 +2167,6 @@ parameter_list|()
 block|{
 return|return
 name|columns
-return|;
-block|}
-comment|/**      * Returns a HAVING clause Expression of this query.      */
-specifier|public
-name|Expression
-name|getHaving
-parameter_list|()
-block|{
-return|return
-name|having
 return|;
 block|}
 comment|/**      * @since 4.2      */
