@@ -191,6 +191,10 @@ name|Expression
 name|where
 decl_stmt|;
 specifier|protected
+name|Expression
+name|having
+decl_stmt|;
+specifier|protected
 name|Collection
 argument_list|<
 name|Ordering
@@ -224,6 +228,11 @@ decl_stmt|;
 specifier|protected
 name|String
 name|cacheGroup
+decl_stmt|;
+name|boolean
+name|havingExpressionIsActive
+init|=
+literal|false
 decl_stmt|;
 specifier|protected
 name|FluentSelect
@@ -372,6 +381,13 @@ operator|.
 name|setQualifier
 argument_list|(
 name|where
+argument_list|)
+expr_stmt|;
+name|replacement
+operator|.
+name|setHavingQualifier
+argument_list|(
+name|having
 argument_list|)
 expr_stmt|;
 name|replacement
@@ -528,6 +544,16 @@ return|return
 name|where
 return|;
 block|}
+comment|/**      * Returns a HAVING clause Expression of this query.      */
+specifier|public
+name|Expression
+name|getHaving
+parameter_list|()
+block|{
+return|return
+name|having
+return|;
+block|}
 specifier|public
 name|Collection
 argument_list|<
@@ -548,6 +574,55 @@ block|{
 return|return
 name|prefetches
 return|;
+block|}
+name|void
+name|setActiveExpression
+parameter_list|(
+name|Expression
+name|exp
+parameter_list|)
+block|{
+if|if
+condition|(
+name|havingExpressionIsActive
+condition|)
+block|{
+name|having
+operator|=
+name|exp
+expr_stmt|;
+block|}
+else|else
+block|{
+name|where
+operator|=
+name|exp
+expr_stmt|;
+block|}
+name|replacementQuery
+operator|=
+literal|null
+expr_stmt|;
+block|}
+name|Expression
+name|getActiveExpression
+parameter_list|()
+block|{
+if|if
+condition|(
+name|havingExpressionIsActive
+condition|)
+block|{
+return|return
+name|having
+return|;
+block|}
+else|else
+block|{
+return|return
+name|where
+return|;
+block|}
 block|}
 annotation|@
 name|Override
