@@ -17,6 +17,66 @@ end_package
 
 begin_import
 import|import
+name|java
+operator|.
+name|sql
+operator|.
+name|Statement
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|ArrayList
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Arrays
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Collection
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Collections
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -36,22 +96,6 @@ operator|.
 name|cayenne
 operator|.
 name|ObjectContext
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|cayenne
-operator|.
-name|exp
-operator|.
-name|property
-operator|.
-name|BaseProperty
 import|;
 end_import
 
@@ -93,6 +137,36 @@ name|cayenne
 operator|.
 name|exp
 operator|.
+name|Property
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|exp
+operator|.
+name|property
+operator|.
+name|BaseProperty
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|exp
+operator|.
 name|property
 operator|.
 name|ComparableProperty
@@ -112,20 +186,6 @@ operator|.
 name|property
 operator|.
 name|NumericProperty
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|cayenne
-operator|.
-name|exp
-operator|.
-name|Property
 import|;
 end_import
 
@@ -184,66 +244,6 @@ operator|.
 name|map
 operator|.
 name|ObjEntity
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|sql
-operator|.
-name|Statement
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|ArrayList
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Arrays
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Collection
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Collections
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|List
 import|;
 end_import
 
@@ -879,6 +879,63 @@ argument_list|)
 argument_list|)
 return|;
 block|}
+comment|/**      * Appends a having qualifier expression of this query. An equivalent to      * {@link #and(Expression...)} that can be used a syntactic sugar.      *      * @return this object      * @since 4.2      */
+specifier|public
+name|ObjectSelect
+argument_list|<
+name|T
+argument_list|>
+name|having
+parameter_list|(
+name|Expression
+name|expression
+parameter_list|)
+block|{
+name|havingExpressionIsActive
+operator|=
+literal|true
+expr_stmt|;
+return|return
+name|and
+argument_list|(
+name|expression
+argument_list|)
+return|;
+block|}
+comment|/**      * Appends a having qualifier expression of this query, using provided expression      * String and an array of position parameters. This is an equivalent to      * calling "and".      *      * @return this object      * @since 4.2      */
+specifier|public
+name|ObjectSelect
+argument_list|<
+name|T
+argument_list|>
+name|having
+parameter_list|(
+name|String
+name|expressionString
+parameter_list|,
+name|Object
+modifier|...
+name|parameters
+parameter_list|)
+block|{
+name|havingExpressionIsActive
+operator|=
+literal|true
+expr_stmt|;
+return|return
+name|and
+argument_list|(
+name|ExpressionFactory
+operator|.
+name|exp
+argument_list|(
+name|expressionString
+argument_list|,
+name|parameters
+argument_list|)
+argument_list|)
+return|;
+block|}
 comment|/**      * AND's provided expressions to the existing WHERE clause expression.      *      * @return this object      */
 specifier|public
 name|ObjectSelect
@@ -958,9 +1015,15 @@ name|Expression
 argument_list|>
 name|all
 decl_stmt|;
+name|Expression
+name|activeExpression
+init|=
+name|getActiveExpression
+argument_list|()
+decl_stmt|;
 if|if
 condition|(
-name|where
+name|activeExpression
 operator|!=
 literal|null
 condition|)
@@ -983,7 +1046,7 @@ name|all
 operator|.
 name|add
 argument_list|(
-name|where
+name|activeExpression
 argument_list|)
 expr_stmt|;
 name|all
@@ -1001,18 +1064,15 @@ operator|=
 name|expressions
 expr_stmt|;
 block|}
-name|where
-operator|=
+name|setActiveExpression
+argument_list|(
 name|ExpressionFactory
 operator|.
 name|and
 argument_list|(
 name|all
 argument_list|)
-expr_stmt|;
-name|replacementQuery
-operator|=
-literal|null
+argument_list|)
 expr_stmt|;
 return|return
 name|this
@@ -1097,9 +1157,15 @@ name|Expression
 argument_list|>
 name|all
 decl_stmt|;
+name|Expression
+name|activeExpression
+init|=
+name|getActiveExpression
+argument_list|()
+decl_stmt|;
 if|if
 condition|(
-name|where
+name|activeExpression
 operator|!=
 literal|null
 condition|)
@@ -1122,7 +1188,7 @@ name|all
 operator|.
 name|add
 argument_list|(
-name|where
+name|activeExpression
 argument_list|)
 expr_stmt|;
 name|all
@@ -1140,18 +1206,15 @@ operator|=
 name|expressions
 expr_stmt|;
 block|}
-name|where
-operator|=
+name|setActiveExpression
+argument_list|(
 name|ExpressionFactory
 operator|.
 name|or
 argument_list|(
 name|all
 argument_list|)
-expr_stmt|;
-name|replacementQuery
-operator|=
-literal|null
+argument_list|)
 expr_stmt|;
 return|return
 name|this
