@@ -1424,6 +1424,124 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|test_Select_Having
+parameter_list|()
+block|{
+name|List
+argument_list|<
+name|Artist
+argument_list|>
+name|artists
+init|=
+name|ObjectSelect
+operator|.
+name|query
+argument_list|(
+name|Artist
+operator|.
+name|class
+argument_list|)
+operator|.
+name|having
+argument_list|(
+name|Artist
+operator|.
+name|PAINTING_ARRAY
+operator|.
+name|count
+argument_list|()
+operator|.
+name|gt
+argument_list|(
+literal|3L
+argument_list|)
+argument_list|)
+operator|.
+name|select
+argument_list|(
+name|context
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|5
+argument_list|,
+name|artists
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|test_Select_Where_Having
+parameter_list|()
+block|{
+name|List
+argument_list|<
+name|Artist
+argument_list|>
+name|artists
+init|=
+name|ObjectSelect
+operator|.
+name|query
+argument_list|(
+name|Artist
+operator|.
+name|class
+argument_list|)
+operator|.
+name|where
+argument_list|(
+name|Artist
+operator|.
+name|ARTIST_NAME
+operator|.
+name|eq
+argument_list|(
+literal|"artist1"
+argument_list|)
+argument_list|)
+operator|.
+name|having
+argument_list|(
+name|Artist
+operator|.
+name|PAINTING_ARRAY
+operator|.
+name|count
+argument_list|()
+operator|.
+name|gt
+argument_list|(
+literal|3L
+argument_list|)
+argument_list|)
+operator|.
+name|select
+argument_list|(
+name|context
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|artists
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 end_class
 
